<resources>
    <string name="app_name">智联蓝鲸</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_content">ContentActivity</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="loading">loading...</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="title_activity_blog_message">正文</string>

    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_one_line_fill">OneLineFillActivity</string>

    <string name="take_photo_now">拍照</string>
    <string name="choose_from_glary">从相册选取</string>


    <string name="apply_org">申请单位</string>

    <string name="contact_numbers">联系电话</string>

    <string name="campus_name">校区</string>

    <string name="start_section">开始节次</string>

    <string name="last_section">节数</string>

    <string name="tutor_department">指导老师所在部门</string>
    <string name="title_activity_blog">BlogActivity</string>
    <string name="title_activity_course_or_plan">CourseOrPlanActivity</string>
    <string name="title_activity_classroom_detail">ClassroomDetailActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="import_course_items">导入课程表</string>


</resources>
